name:                stt
version:             0.1.0.0
synopsis:            A monad transformer version of the ST monad
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10
description:	
   A monad transformer version of the ST monad

   Warning! This monad transformer should not be used with monads that
   can contain multiple answers, like the list monad. The reason is that 
   the state token will be duplicated across the different answers and this causes
   Bad Things to happen (such as loss of referential transparency). Safe 
   monads include the monads State, Reader, Writer, Maybe and 
   combinations of their corresponding monad transformers.
library
  exposed-modules:     Control.Monad.Trans.ST
                       Control.Monad.Trans.ST.Internal
  build-depends:       base >= 4.9 && < 4.10
                     , mtl  >= 2.2.1 && < 3
                     , primitive >= 0.6.1 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
